index.scss
/* ... */
#connection {
  background-color: #f8f8f6;
  height: 924px;
  position: relative;
  z-index: 1;

  figure.section {
    width: 924px;
    margin: 90px auto;

    .arrow {
      display: block;
      float: left;
      width: 50px;
      margin: 167px 4px;
    }

    .party {
      margin: 60px auto;
    }
  }

  figure.conn-stage {
    float: left;
  }

  figure.device {
    background-image: url(../img/iphone.png);
    width: 185px;
    height: 370px;

    img {
      padding-top: 50px;
    }
  }
  
  a {
    color: #f95a2c;
    font-weight: 500;
  }
}

@media (max-width: 1050px) {
  #comparison {
    table {
      width: 900px;

      td {
        width: 190px;

        &.highlight {
          width: 140px;
        }
      }
    }

    .table-comments {
      width: 900px;
    }
  }
}

@media (min-width: 1050px) {
  #comparison {
    table {
      width: 1050px;

      td {
        width: 215px;

        &.highlight {
          width: 155px;
        }
      }
    }

    .table-comments {
      width: 1050px;
    }
  }
}

#comparison {
  height: 800px;

  h2 {
    padding-top: 23px;
  }

  table,
  ol,
  ul {
    font-family: Raleway, Arial, Helvetica, sans-serif;
    color: #062d56;
  }

  table {
    border-collapse: separate;
    border-spacing: 10px;
    margin: 59px auto 0 auto;
    background-color: #f8f8f6;
    padding-bottom: 60px;

    th {
      font-weight: normal;
      height: 40px;

      &.simplex {
        font-weight: bold;

        img {
          width: 25px;
          height: 23px;
          vertical-align: -6px;
        }
      }
    }

    td,
    th {
      font-size: 15px;
      font-weight: normal;
      font-stretch: normal;
      font-style: normal;
      line-height: 1.4;
      letter-spacing: 0.47px;

      .equal {
        font-size: 18px;
      }
    }

    td {
      height: 40px;
      margin: 0 10px 10px 0;

      &.highlight {
        text-align: center;
        color: white;
        font-weight: 500;
      }

      &.bad {
        background-color: #f95a2c;
      }

      &.medium {
        background-color: #ffbd12;
      }

      &.good {
        background-color: #07b4b9;
      }
    }
  }

  .table-comments {
    margin: auto;

    ul.legend,
    .footnotes {
      float: right;
      font-size: 9px;
      font-weight: normal;
      font-stretch: normal;
      font-style: normal;
      vertical-align: -6px;
      margin-left:-27px;
    }

    ul.legend {
      list-style: none;
      line-height: 2.31;
      letter-spacing: 0.41px;

      li {
        &.bad::before {
          background-color: #f95a2c;
        }

        &.medium::before {
          background-color: #ffbd12;
        }

        &.good::before {
          background-color: #07b4b9;
        }

        &::before {
          content: "";
          display: inline-block;
          width: 20px;
          height: 20px;
          margin-right: 10px;
          vertical-align: -6px;
        }
      }
    }

    .footnotes {
      float: left;
      line-height: 1.62;
      letter-spacing: 0.41px;

      a {
        color: #f95a2c;
        font-weight: bold;
      }
    }
  }
}

#messaging {
  background-image: linear-gradient(180deg, #fbd561 0%, #efa647 100%);
  height: 678px;
  position: relative;
  z-index: 1;

  h2 {
    padding-top: 52px;
  }

  figure.section {
    width: 750px;
    margin: 70px auto;

    figure.party {
      float: left;
      // mix-blend-mode: multiply;
    }

    img {
      float: left;
      display: block;
      margin: 28px 17px 0 25px;
    }
  }

  a {
    color: #f95a2c;
    font-weight: 500;
  }
}

#chat {
  background-color: #f8f8f6;
  height: 683px;
  position: relative;
  z-index: 1;

  figure.section {
    width: 740px;
    margin-top: 57px;

    img {
      display: block;
      float: left;
      margin-right: 6px;
    }

    .party {
      float: left;
      margin: 80px 9px;
    }
  }
}

#simplex {
  background-color: white;
  height: 550px;

  h3 {
    padding-top: 67px;
  }

  p {
    width: 455px;
  }

  section.half {
    width: 50%;
    float: left;
  }

  input,
  button,
  span.button {
    border-radius: 20px;
    height: 40px;
  }

  .sign-up {
    width: 430px;
    margin: 22px auto;

    input {
      background-color: #efefea;
      width: 283px;
      margin-right: 10px;
      padding: 0 15px;
      font-size: 17px;
      letter-spacing: 0.53px;
    }

    button {
      width: 127px;
      font-size: 17px;
      letter-spacing: 0.53px;
    }
  }

  #use-simplex {
    a {
      color: #f95a2c;
      font-weight: 500;
    }
  }

  #contacts {
    width: 320px;
    margin: 22px auto;

    p {
      text-align: left;
    }

    span.button {
      width: 100px;
      font-size: 17px;
      line-height: 40px;
    }

    a {
      color: #062d56;
      font-size: 17px;
      letter-spacing: 0.53px;
      line-height: 25px;
      text-decoration: none;
    }
  }
}

#demo {
  .content_copy_with_tooltip {
    background-color: #f8f8f6;
    border-radius: 50px;
    padding-bottom: 4px;
    padding-top: 8px;
    margin-top: 16px;
    margin-bottom: 16px;

    .tooltip {
      vertical-align: -6px;
    }
    
    .content {
      font-size: 15px;
    }
  }
}
/* ... */

